# tenji

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py
mfc/: __init__.py  client.py
mfc/exceptions/: parser_exception.py
mfc/model/: collection.py  item.py  profile.py  user_list.py  user_list_basic.py  users_lists.py
mfc/model/shop/: shop.py  shop_list_item.py
mfc/model/user/: collection.py  user_list.py  users_lists.py
mfc/parser/: __init__.py  collection.py  home.py  item.py  profile.py  user_list.py  user_lists.py
mfc/parser/item/: item.py
mfc/parser/shop/: shop.py  shops.py
mfc/parser/user/: collection.py  profile.py  user_list.py  user_lists.py
mfc/request/: __init__.py  collection.py  home.py  item.py  login.py  profile.py  users_lists.py
mfc/request/item/: item.py
mfc/request/shop/: shop.py  shops.py
mfc/request/user/: collection.py  user_list.py
src/tenji/: __init__.py  client.py  mfc_response.py
src/tenji/exceptions/: __init__.py  request_exception.py
src/tenji/model/: __init__.py  meta.py
src/tenji/parser/: __init__.py  parser_base.py
src/tenji/request/: home.py  login.py
tenji/: client.py
tenji/exceptions/: __init__.py  parser_exception.py
tenji/model/: category.py  paginated.py
tenji/model/item/: __init__.py  item.py  partner_listing.py
tenji/model/shop/: __init__.py
tenji/model/user/: profile.py  user_list.py  user_list_item.py  users_lists.py
tenji/parser/: home.py  parser_base.py
tenji/parser/item/: __init__.py  item.py  (+1 more)
tenji/request/: __init__.py  request_base.py
(+37 files in other folders)
